controller broadcasting in another thread; expander will now expand on client then controller connected

--- a/ScreamControl_Control/App.config
+++ b/ScreamControl_Control/App.config
@@ -2,27 +2,35 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="ScreamControl_Control.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="ScreamControl.Controller.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
-    </startup>
+  <!--<runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Interactivity"
+                          publicKeyToken="31bf3856ad364e35"
+                          culture="neutral"/>
+        <bindingRedirect oldVersion="4.0.0.0"
+                         newVersion="4.5.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>-->
     <userSettings>
-        <ScreamControl_Control.Properties.Settings>
-            <setting name="DefaultLanguage" serializeAs="String">
+        <ScreamControl.Controller.Properties.Settings>
+            <setting name="CurrentLanguage" serializeAs="String">
                 <value>en-US</value>
             </setting>
-            <setting name="Boost" serializeAs="String">
+            <setting name="MicCaptureBoost" serializeAs="String">
                 <value>100</value>
             </setting>
             <setting name="AlarmVolume" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="SafeScreamZone" serializeAs="String">
+            <setting name="DelayBeforeAlarm" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="AlertOverlayDelay" serializeAs="String">
+            <setting name="DelayBeforeOverlay" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="Threshold" serializeAs="String">
@@ -37,29 +45,22 @@
             <setting name="IsSoundAlertEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="StealthMode" serializeAs="String">
+            <setting name="IsStealthMode" serializeAs="String">
                 <value>False</value>
             </setting>
-        </ScreamControl_Control.Properties.Settings>
-        <ScreamControl_WPF.Properties.Settings>
-            <setting name="DefaultLanguage" serializeAs="String">
-                <value>en-US</value>
-            </setting>
-            <setting name="Boost" serializeAs="String">
-                <value>100</value>
-            </setting>
-            <setting name="Volume" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="SafeScreamZone" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="AlertOverlayDelay" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="Threshold" serializeAs="String">
-                <value>80</value>
-            </setting>
-        </ScreamControl_WPF.Properties.Settings>
+        </ScreamControl.Controller.Properties.Settings>
     </userSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="log.txt"></add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  <system.web>
+    <compilation debug="true" />
+  </system.web>
 </configuration>
