--- a/ScreamControl_Client/ScreamControl.Client.csproj
+++ b/ScreamControl_Client/ScreamControl.Client.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1DA774DC-D988-4058-B9BF-CBEBA7BAC32C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScreamControl_Client</RootNamespace>
-    <AssemblyName>ScreamControl</AssemblyName>
+    <RootNamespace>ScreamControl.Client</RootNamespace>
+    <AssemblyName>ScreamControl.Client</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -54,9 +54,6 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSCore">
-      <HintPath>..\packages\CSCore.1.2.0\lib\net35-client\CSCore.dll</HintPath>
-    </Reference>
     <Reference Include="DeltaCompressionDotNet">
       <HintPath>..\packages\DeltaCompressionDotNet.1.0.0\lib\net45\DeltaCompressionDotNet.dll</HintPath>
     </Reference>
@@ -85,9 +82,6 @@
     </Reference>
     <Reference Include="Octokit">
       <HintPath>..\packages\Octokit.0.24.0\lib\net45\Octokit.dll</HintPath>
-    </Reference>
-    <Reference Include="Overlay.NET">
-      <HintPath>..\packages\Overlay.NET.1.0.2\lib\Overlay.NET.dll</HintPath>
     </Reference>
     <Reference Include="Process.NET">
       <HintPath>..\packages\Overlay.NET.1.0.2\lib\Process.NET.dll</HintPath>
@@ -136,8 +130,6 @@
     </ApplicationDefinition>
     <Compile Include="Model\MainModel.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="Classes\AlarmSystem.cs" />
-    <Compile Include="Classes\AlertOverlay.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
