--- a/ScreamControl_Client/ScreamControl.Client.csproj
+++ b/ScreamControl_Client/ScreamControl.Client.csproj
@@ -103,6 +103,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
