fixed window doesn't hiding in stealth mode

--- a/ScreamControl_Client/Properties/Settings.settings
+++ b/ScreamControl_Client/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ScreamControl_Client.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ScreamControl.Client.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="CurrentLanguage" Type="System.Globalization.CultureInfo" Scope="User">
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="IsStealthMode" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Threshold" Type="System.Single" Scope="User">
       <Value Profile="(Default)">0</Value>
