--- a/ScreamControl_Client/App.config
+++ b/ScreamControl_Client/App.config
@@ -29,7 +29,7 @@
                 <value>False</value>
             </setting>
             <setting name="IsStealthMode" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Threshold" serializeAs="String">
                 <value>0</value>
