added settings upgrading

--- a/ScreamControl_Client/App.config
+++ b/ScreamControl_Client/App.config
@@ -40,6 +40,9 @@
             <setting name="IsStealthMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IsUpgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ScreamControl.Client.Properties.Settings>
     </userSettings>
   <system.diagnostics>
