--- a/ScreamControl_Client/Properties/Settings.settings
+++ b/ScreamControl_Client/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="IsStealthMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="IsUpgraded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
