--- a/ScreamControl_Control/App.config
+++ b/ScreamControl_Control/App.config
@@ -48,6 +48,9 @@
             <setting name="IsStealthMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IsUpgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ScreamControl.Controller.Properties.Settings>
     </userSettings>
   <startup>
