--- a/ScreamControl_Control/Properties/Settings.settings
+++ b/ScreamControl_Control/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ScreamControl_Control.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ScreamControl.Controller.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="CurrentLanguage" Type="System.Globalization.CultureInfo" Scope="User">
@@ -30,6 +30,9 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="IsStealthMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="IsUpgraded" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
