--- a/ScreamControl.View/ScreamControl.View.csproj
+++ b/ScreamControl.View/ScreamControl.View.csproj
@@ -76,6 +76,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="InfoPopupView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Language\lang.en-US.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -89,6 +93,9 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Helpers\Hotkey.cs" />
+    <Compile Include="InfoPopupView.xaml.cs">
+      <DependentUpon>InfoPopupView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
