--- a/Updater/App.config
+++ b/Updater/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+<system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="log.txt"></add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
