--- a/Updater/App.config
+++ b/Updater/App.config
@@ -6,7 +6,7 @@
 <system.diagnostics>
     <trace autoflush="true" indentsize="4">
       <listeners>
-        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="log.txt"></add>
+        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="logs/log.txt"></add>
       </listeners>
     </trace>
   </system.diagnostics>
